# lang-mdf

./: .gitignore  .glottologid.txt  AUTHORS  CITATION.cff  LICENCE  Links.md  Makefile.am  Makefile.in  MokshaDocumentation.jspwiki  README  README.markdown  README.md  adjectives-affixes-fst-src.md  adjectives-russian-like_newwords-stems-fst-src.md  adjectives_newwords-stems-fst-src.md  adpositions-affixes-fst-src.md  adpositions-affixes.md  adverbs-affixes-fst-src.md  autogen.sh  clitics-affixes-fst-src.md  configure.ac  conjunctors-affixes-fst-src.md  disambiguator-cg3-src.md  exceptions-stems-fst-src.md  giella-mdf.pc.in  grammarchecker-grammarcheckers-tools.md  index-header.md  index.md  interjections-affixes-fst-src.md  interjections-affixes.md  lemmacount.json  manifest.toml  manifest.toml.in  mdf.md  metadata.json  nouns-affixes-fst-src.md  nouns-affixes.md  nouns-russian-homographs_newwords-stems-fst-src.md  nouns-russian-homographs_newwords-stems.md  nouns_newwords-stems-fst-src.md  (+72 more)
.gut/: delta.toml  manifest.toml
am-shared/: topdir-include.am
corp/: mdfwiki.txt
devtools/: adj_minip.sh  noun_minip.sh  ocred-txt2xml.py  tag_test.sh  test_ospell-office_suggestions.sh  test_voikkospell_suggestions.sh  verb_minip.sh
doc/: Links.jspwiki  Makefile.am  (+14 more)
src/: 00_readme.txt  Makefile  Makefile.am  Makefile_xml  mdf-lex.txt  noun-mdf-morph.txt  num-mdf-morph.txt  pron-mdf-morph.txt  verb-mdf-morph.txt  xfst-mdf.txt
src/cg3/: dependency.cg3  disambiguator.cg3  functions.cg3  generated-tag-list.cg3
src/filters/: Makefile.am  remove-hard-sign-in-first-syllable.regex
src/fst/: Makefile.am  compounding.lexc  phonology.twolc  root.lexc  tags.yaml
src/fst/affixes/: adjectives.lexc  adpositions.lexc  adverbs.lexc  clitics.lexc  conjunctors.lexc  interjections.lexc  nouns.lexc  numbers.lexc  particles.lexc  pronouns.lexc  propernouns.lexc  verbs.lexc
src/fst/filters/: Makefile.am
src/fst/morphology/: Makefile.am  Makefile.modifications-local.am  compounding.lexc  phonology.twolc  root.lexc
src/fst/morphology/affixes/: adjectives.lexc  adpositions.lexc  adverbs.lexc  clitics.lexc  interjections.lexc  nouns.lexc  numbers.lexc  particles.lexc  pronouns.lexc  propernouns.lexc  verbs.lexc
src/fst/morphology/stems/: #Adp_mdf2x.xml#  A_mdf2x.lexc  A_mdf2x.xml  Adp_mdf2x.lexc  Adp_mdf2x.xml  Adv_mdf2x.lexc  Adv_mdf2x.xml  CS_mdf2x.lexc  Descr_mdf2x.lexc  Interj_mdf2x.lexc  N_Prop_mdf2x.lexc  N_Prop_mdf2x.xml  N_mdf2x.lexc  N_mdf2x.xml  Num_mdf2x.lexc  Num_mdf2x.xml  Pcle_mdf2x.xml  Prc_mdf2x.lexc  Pron_mdf2x.xml  V_mdf2x.lexc  adjectives_newwords.lexc  exceptions.lexc  foreign_words.lexc  nouns-russian-homographs_newwords.lexc  nouns_newwords.lexc  nouns_russian_100_newwords.lexc  propernouns_newwords.lexc  verbs_newwords.lexc
src/fst/morphology/test/: Makefile.am  config.json.in  generate-adjective-lemmas.sh.in  generate-noun-lemmas.sh.in  generate-propernoun-lemmas.sh.in  generate-verb-lemmas.sh.in  paradigm.mdf.txt  paradigm.old.mdf.txt  paradigm_full.mdf.txt  paradigm_min.mdf.txt  paradigm_standard.mdf.txt  testnounparadigm.txt
src/fst/morphology/test/phonology/: Makefile.am
src/fst/orthography/: inituppercase.regex  spellrelax.regex
src/fst/scripts/: urj-mdf-conversion.pl  urj-mdf-conversion.pl~
src/fst/stems/: A_mdf2x.lexc  A_mdf2x.xml  Adp_mdf2x.lexc  Adp_mdf2x.xml  Adv_mdf2x.lexc  Adv_mdf2x.xml  CC_mdf2x.xml  CS_mdf2x.xml  Descr_mdf2x.xml  Ger_mdf2x.lexc  Ger_mdf2x.xml  Interj_mdf2x.lexc  Interj_mdf2x.xml  N_Prop_mdf2x.lexc  N_Prop_mdf2x.xml  N_mdf2x.lexc  N_mdf2x.xml  Num_mdf2x.lexc  Num_mdf2x.xml  Pcle_mdf2x.lexc  Pcle_mdf2x.xml  Prc_mdf2x.lexc  Prc_mdf2x.xml  Pron_mdf2x.xml  V_mdf2x.lexc  abbreviations.lexc  adjectives-russian-like_newwords.lexc  adjectives_newwords.lexc  exceptions.lexc  nouns-russian-homographs_newwords.lexc  nouns_newwords.lexc  propernouns_newwords.lexc  verbs_newwords.lexc
src/fst/syllabification/: hyphenation.xfscript
src/fst/test/gt-norm-yamls/: N-abstrakcia_gt-norm.yaml  N-avaka_gt-norm.yaml  N-osh_gt-norm.yaml  N-pinge_gt-norm.yaml  V-ashchems_gt-norm.yaml  V-kandoms_gt-norm.yaml  V-kundams_gt-norm.yaml  V-tijems_gt-norm.yaml
src/fst/transcriptions/: transcriptor-symbols2text.lexc
src/morphology/: Makefile.am  missing6freq.txt  missingfreq.txt  missingrevalph.txt  phonology.twolc  root.lexc  tags.yaml
src/morphology/affixes/: adjectives.lexc  adpositions.lexc  adverbs.lexc  clitics.lexc  conjunctions.lexc  conjunctors.lexc  interjections.lexc  nouns.lexc  numbers.lexc  particles.lexc  pronouns.lexc  propernouns.lexc  quantifiers.lexc  verbs.lexc
src/morphology/stems/: A_mdf2x.lexc  A_mdf2x.xml  Adp_mdf2x.lexc  Adp_mdf2x.xml  Adv_mdf2x.lexc  Adv_mdf2x.xml  CC_mdf2x.lexc  CC_mdf2x.xml  CS_mdf2x.xml  Descr_mdf2x.lexc  Descr_mdf2x.xml  Ger_mdf2x.lexc  Ger_mdf2x.xml  Interj_mdf2x.lexc  Interj_mdf2x.xml  N_Prop_mdf2x.lexc  N_Prop_mdf2x.xml  N_mdf2x.lexc  N_mdf2x.xml  Num_mdf2x.lexc  Num_mdf2x.xml  Pcle_mdf2x.lexc  Pcle_mdf2x.xml  Prc_mdf2x.lexc  Prc_mdf2x.xml  Pron_mdf2x.lexc  Pron_mdf2x.xml  V_mdf2x.lexc  V_mdf2x.xml  abbreviations.lexc  acronyms.lexc  adjectives-mwe.xml  adjectives-russian-like_newwords.lexc  adjectives.lexc  adjectives.xml  adjectives_newwords.lexc  adpositions.lexc  adpositions.xml  adverbs-mwe.xml  adverbs.lexc  (+41 more)
src/orthography/: inituppercase.regex  spellrelax-nfc2nfd.regex  spellrelax-nfc2nfd.regex.sigma.nfc  spellrelax-nfc2nfd.regex.sigma.nfd  spellrelax.regex  spellrestrict-nfd2nfc.regex.sigma.nfc
src/phonology/: mdf-phon.twolc  mdf-phon.xfscript  und-phon.twolc
src/scripts/: urj-mdf-conversion.pl
src/syntax/: disambiguation.cg3  disambiguator.cg3
src/transcriptions/: clock.lexc  numbers.lexc  transcriptor-abbrevs2text.lexc  transcriptor-clock-digit2text.lexc  transcriptor-date-digit2text.lexc  transcriptor-numbers-digit2text.lexc
src/working_files/: ADV_mdf-lex.xml  A_mdf-lex.xml  CONJ_mdf-lex.xml  DESCR_mdf-lex.xml  GER_mdf-lex.xml  INTERJ_mdf-lex.xml  MWE_mdf-lex.xml  NUM_mdf-lex.xml  N_mdf-lex.xml  PCLE_mdf-lex.xml  POSTP_mdf-lex.xml  PRON_mdf-lex.xml  PTC_mdf-lex.xml  V_mdf-lex.xml
(+152 files in other folders)
